# pypoker-eval

./: .gitignore  AUTHORS  ChangeLog  INSTALL.windows  MANIFEST  Makefile.am  NEWS  README  configure.ac  pokereval.py  pypoker-eval.pc.in  pypoker-eval.sln  pypoker-eval.vcproj  pypokereval.c  setup.py  test.py
config/: ccpython.m4  python.m4
config/.svn/: entries
debian/: control  control.edgy  control.etch  control.hardy  control.hoary  control.squeeze  copyright  rules
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  control.lenny.svn-base
gentoo/.svn/: entries
gentoo/dev-games/.svn/: entries
gentoo/dev-games/pypoker-eval/: pypoker-eval-133.0-r1.ebuild
gentoo/dev-games/pypoker-eval/.svn/: entries
